syntax = "proto3";

package inventory;

option go_package = "inventory-service/proto/inventory";

service InventoryService {
  rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse);
  rpc ListInventory(ListInventoryRequest) returns (ListInventoryResponse);
  rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
  rpc ReserveStock(ReserveStockRequest) returns (ReserveStockResponse);
  rpc FulfillReservation(FulfillReservationRequest) returns (FulfillReservationResponse);
  rpc ReleaseReservation(ReleaseReservationRequest) returns (ReleaseReservationResponse);
}

message InventoryItem {
  int32 product_id = 1;
  int32 stock = 2;
  int32 reserved = 3;
}

message GetInventoryRequest {
  int32 product_id = 1;
}

message GetInventoryResponse {
  InventoryItem item = 1;
}

message ListInventoryRequest {
}

message ListInventoryResponse {
  repeated InventoryItem items = 1;
}

message UpdateStockRequest {
  int32 product_id = 1;
  int32 quantity = 2;
}

message UpdateStockResponse {
  InventoryItem item = 1;
}

message ReserveStockRequest {
  int32 product_id = 1;
  int32 stock = 2;
}

message ReserveStockResponse {
  InventoryItem item = 1;
}

message FulfillReservationRequest {
  int32 product_id = 1;
  int32 stock = 2;
}

message FulfillReservationResponse {
  InventoryItem item = 1;
}

message ReleaseReservationRequest {
  int32 product_id = 1;
  int32 stock = 2;
}

message ReleaseReservationResponse {
  InventoryItem item = 1;
}
