syntax = "proto3";

package orders;

option go_package = "orders-service/proto/orders";

service OrderService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc FulfillOrder(FulfillOrderRequest) returns (FulfillOrderResponse);
}

message OrderItem {
  int32 product_id = 1;
  int32 quantity = 2;
}

message Order {
  int32 id = 1;
  int32 customer_id = 2;
  repeated OrderItem items = 3;
  string status = 4;
  double total_amount = 5;
  string created_at = 6;
}

message GetOrderRequest {
  int32 id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message CreateOrderRequest {
  int32 customer_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message FulfillOrderRequest {
  int32 id = 1;
}

message FulfillOrderResponse {
  Order order = 1;
}
